# LeakLens

./: .gitignore  .leaklensignore  .pre-commit-config.yaml  Makefile  README.md  leaklens.yml  pyproject.toml
.github/workflows/: leaklens.yml
examples/vulnerable_repo/: .env  README.md  app.py  config.yaml
src/leaklens/: __init__.py  __main__.py  baseline.py  cli.py  config.py  engine.py  fileio.py  gitutils.py  ignore.py  models.py  redaction.py  rules.py  verification.py
src/leaklens/detectors/: __init__.py  base.py  context.py  entropy.py  regex.py
src/leaklens/reporters/: __init__.py  json_reporter.py  sarif_reporter.py  terminal.py
tests/: test_cli.py  test_config.py  test_context.py  test_engine.py  test_entropy.py  test_git_integration.py  test_ignore.py  test_redaction.py  test_regex.py  test_sarif.py  test_verification.py
